--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Victor Ximenis",
   "devDependencies": {
     "electron": "^16.0.2",
-    "electron-builder": "^22.14.5"
+    "electron-builder": "^22.14.5",
+    "jest": "^27.4.4"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4"
