--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dist": "electron-builder"
+    "dist": "electron-builder",
+    "test": "jest"
   },
   "author": "Victor Ximenis",
   "devDependencies": {
+    "assert": "^2.0.0",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "chai-roughly": "^1.0.0",
     "electron": "^16.0.2",
     "electron-builder": "^22.14.5",
-    "jest": "^27.4.4"
+    "fs": "^0.0.1-security",
+    "jest": "^27.4.4",
+    "temp": "^0.9.4"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4"
